--- a/index.html
+++ b/index.html
@@ -806,7 +806,13 @@
             </div>
 
             <!-- Modal Content -->
-            <div class="p-6 text-gray-700 leading-relaxed">
+             <style>
+                #modal-content {
+                    max-height: 60vh;
+                    overflow-y: auto;
+                }
+             </style>
+            <div id="modal-content" class="p-6 text-gray-700 leading-relaxed">
                 <p class="mb-4">
                     We strictly recommend you to please visit and browse this site on your own risk. All the information
                     available here is strictly for informational purposes and based on astrology and numerology
