--- a/index.html
+++ b/index.html
@@ -342,12 +342,12 @@
                         <div class="flex-1">
                             <div class="flex items-center space-x-3 mb-3">
                                 <span class="live-badge text-xs px-3 py-1 rounded-full font-bold">LIVE</span>
-                                <span class="card-text-secondary text-sm font-medium">28 June 2025</span>
+                                <span class="card-text-secondary text-sm font-medium">30 June 2025 9.00AM</span>
                             </div>
-                            <h3 class="font-bold text-lg card-text mb-2">Kerala State Bumper</h3>
+                            <h3 class="font-bold text-lg card-text mb-2">Choice Lottery ( CL-17 )</h3>
                             <div class="flex items-center text-sm card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="font-semibold">1st Prize: ₹1 Crore</span>
+                                <span class="font-semibold">1st Prize: ₹1 Lack</span>
                             </div>
                         </div>
                         <div class="text-right">
@@ -363,32 +363,62 @@
                                     <i class="fas fa-medal text-yellow-500 mr-2 text-lg"></i>
                                     1st Prize
                                 </span>
-                                <span class="font-bold text-green-600 text-lg">₹1,00,00,000</span>
+                                <span class="font-bold text-green-600 text-lg">₹100,000</span>
                             </div>
                             <div class="text-center">
-                                <div class="winning-number text-2xl font-mono py-4 px-6 inline-block">AB 123456</div>
+                                <div class="winning-number text-2xl font-mono py-4 px-6 inline-block">MH 40352</div>
                             </div>
                             <div class="grid grid-cols-1 gap-2 text-sm">
                                 <div class="prize-row flex justify-between p-2">
                                     <span class="font-medium text-gray-600">2nd Prize:</span>
-                                    <span class="font-bold text-green-600">₹10,00,000</span>
+                                    <span class="font-bold text-green-600">₹10,000</span>
                                 </div>
+                                <!-- Adding Result -->
+                                <style>
+                                    .winning-number-secondary {
+                                        background: linear-gradient(135deg, #f0f0f0 0%, #d0d0d0 100%);
+                                        color: #555;
+                                        line-height: 0;
+                                        font-weight: 600;
+                                        letter-spacing: 1px;
+                                        border-radius: 8px;
+                                        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+                                        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+                                        opacity: 0.9;
+                                        font-size: 1.2rem;
+                                        padding: 16px 32px;
+                                        /* Slightly muted for hierarchy */
+                                    }
+                                </style>
+                                <div class="text-center">
+                                    <div class="winning-number-secondary font-mono py-4 px-6 inline-block">2712</div>
+                                </div>
+                                <!--  -->
                                 <div class="prize-row flex justify-between p-2">
                                     <span class="font-medium text-gray-600">3rd Prize:</span>
-                                    <span class="font-bold text-green-600">₹1,00,000</span>
+                                    <span class="font-bold text-green-600">₹5000</span>
+                                </div>
+                                <div class="text-center">
+                                    <div class="winning-number-secondary font-mono py-4 px-6 inline-block">901</div>
                                 </div>
                                 <div class="prize-row flex justify-between p-2">
                                     <span class="font-medium text-gray-600">4th Prize:</span>
-                                    <span class="font-bold text-green-600">₹5,000</span>
+                                    <span class="font-bold text-green-600">₹1000</span>
+                                </div>
+                                <div class="text-center">
+                                    <div class="winning-number-secondary font-mono py-4 px-6 inline-block">032</div>
                                 </div>
                                 <div class="prize-row flex justify-between p-2">
                                     <span class="font-medium text-gray-600">5th Prize:</span>
-                                    <span class="font-bold text-green-600">₹1,000</span>
+                                    <span class="font-bold text-green-600">₹100</span>
+                                </div>
+                                <div class="text-center">
+                                    <div class="winning-number-secondary font-mono py-4 px-6 inline-block">001</div>
                                 </div>
                             </div>
-                            <button class="view-results-btn w-full text-white py-3 font-semibold">
+                            <!-- <button class="view-results-btn w-full text-white py-3 font-semibold">
                                 View Full Results
-                            </button>
+                            </button> -->
                         </div>
                     </div>
                 </div>
@@ -689,11 +719,12 @@
                 </button>
 
                 <!-- Add this in footer/bottom area -->
-<div class="text-center py-4 px-4">
-  <button id="disclaimerBtn" class="text-sm text-gray-500 hover:text-blue-500 transition-colors duration-300 underline">
-    View Disclaimer
-  </button>
-</div>
+                <div class="text-center py-4 px-4">
+                    <button id="disclaimerBtn"
+                        class="text-sm text-gray-500 hover:text-blue-500 transition-colors duration-300 underline">
+                        View Disclaimer
+                    </button>
+                </div>
 
             </div>
         </section>
@@ -806,12 +837,12 @@
             </div>
 
             <!-- Modal Content -->
-             <style>
+            <style>
                 #modal-content {
                     max-height: 60vh;
                     overflow-y: auto;
                 }
-             </style>
+            </style>
             <div id="modal-content" class="p-6 text-gray-700 leading-relaxed">
                 <p class="mb-4">
                     We strictly recommend you to please visit and browse this site on your own risk. All the information
