new update in home page

--- a/part7.html
+++ b/part7.html
@@ -314,7 +314,7 @@
         .card-prize {
             font-size: 1.125rem;
             font-weight: 700;
-            margin-bottom: 16px;
+            /* margin-bottom: 16px; */
         }
 
         /* Enhanced Card Spacing */
@@ -392,7 +392,7 @@
             }
         }
 
-        @media (max-width: 480px) {
+        /* @media (max-width: 480px) {
             .lottery-card {
                 padding: 20px !important;
             }
@@ -422,7 +422,7 @@
             .card-prize {
                 font-size: 1rem;
             }
-        }
+        } */
     </style>
 </head>
 
