new update in home page

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                                 <span class="live-badge rounded-full">LIVE</span>
                                 <span class="card-text-secondary card-date">30 June 2025 9.00AM</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Choice Lottery ( CL-17 th Draw)</h3>
+                            <h3 class="card-text card-lottery-name">Tuesday Choice Weekly Lottery <br>( CL-17 th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
                                 <span class="card-prize">1st Prize: ₹1 Lakh</span>
