new update in home page

--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
                                 <span class="upcoming-badge rounded-full">NEXT</span>
                                 <span class="card-text-secondary card-date">29 June 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">West Bengal Weekly</h3>
+                            <h3 class="card-text card-lottery-name">Wednesday Choice Weekly Lottery <br>( CL 17 th Draw )</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
                                 <span class="card-prize">1st Prize: ₹75 Lakh</span>
