new update in home page

--- a/index.html
+++ b/index.html
@@ -917,10 +917,10 @@
                                 <span class="upcoming-badge rounded-full">UPCOMING</span>
                                 <span class="card-text-secondary card-date">30 June 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Rajasthan Bumper</h3>
+                            <h3 class="card-text card-lottery-name">Thursday Choice Weekly Lottery <br>( CL 17 th Draw )</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">1st Prize: ₹2 Crore</span>
+                                <span class="card-prize">1st Prize: ₹2 Crore</span> 
                             </div>
 
                             <!-- Countdown Timer -->
@@ -984,7 +984,7 @@
                                 <span class="upcoming-badge rounded-full">UPCOMING</span>
                                 <span class="card-text-secondary card-date">01 July 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Tamil Nadu Special</h3>
+                            <h3 class="card-text card-lottery-name">Friday Choice Weekly Lottery <br>( CL 17 th Draw )</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
                                 <span class="card-prize">1st Prize: ₹60 Lakh</span>
@@ -1037,6 +1037,72 @@
                                 <div class="prize-row flex justify-between p-3 rounded">
                                     <span class="font-medium text-gray-600">5th Prize:</span>
                                     <span class="font-bold text-green-600">₹600</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Upcoming Lottery 4 -->
+                <div class="lottery-card upcoming-card-1 cursor-pointer" onclick="toggleResult('upcoming1')">
+                    <div class="flex items-center justify-between">
+                        <div class="flex-1 card-element-spacing">
+                            <div class="flex items-center space-x-3">
+                                <span class="upcoming-badge rounded-full">NEXT</span>
+                                <span class="card-text-secondary card-date">29 June 2025</span>
+                            </div>
+                            <h3 class="card-text card-lottery-name">Saturday Choice Weekly Lottery<br>( CL 17 th Draw )</h3>
+                            <div class="flex items-center card-text-secondary">
+                                <i class="fas fa-trophy text-yellow-300 mr-2"></i>
+                                <span class="card-prize">1st Prize: ₹75 Lakh</span>
+                            </div>
+
+                            <!-- Countdown Timer -->
+                            <div class="countdown-container">
+                                <div class="flex items-center justify-between">
+                                    <span class="countdown-label">Draws in:</span>
+                                    <div class="flex space-x-2 items-center">
+                                        <div class="countdown-badge" id="countdown1-hours">23</div>
+                                        <span class="card-text font-bold">:</span>
+                                        <div class="countdown-badge" id="countdown1-minutes">45</div>
+                                        <span class="card-text font-bold">:</span>
+                                        <div class="countdown-badge" id="countdown1-seconds">30</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="text-right ml-4">
+                            <i id="arrow-upcoming1"
+                                class="fas fa-chevron-down card-text text-xl transition-transform duration-300"></i>
+                        </div>
+                    </div>
+
+                    <div id="upcoming1" class="card-expand collapsed mt-6">
+                        <div class="result-container space-y-3">
+                            <div class="text-center mb-4">
+                                <h4 class="font-bold text-lg text-gray-700 mb-2">Prize Structure</h4>
+                                <p class="text-sm text-gray-600">Draw starts in few hours!</p>
+                            </div>
+                            <div class="grid grid-cols-1 gap-3 text-sm">
+                                <div class="prize-row flex justify-between p-3 rounded">
+                                    <span class="font-medium text-gray-600">1st Prize:</span>
+                                    <span class="font-bold text-green-600">₹75,00,000</span>
+                                </div>
+                                <div class="prize-row flex justify-between p-3 rounded">
+                                    <span class="font-medium text-gray-600">2nd Prize:</span>
+                                    <span class="font-bold text-green-600">₹7,50,000</span>
+                                </div>
+                                <div class="prize-row flex justify-between p-3 rounded">
+                                    <span class="font-medium text-gray-600">3rd Prize:</span>
+                                    <span class="font-bold text-green-600">₹75,000</span>
+                                </div>
+                                <div class="prize-row flex justify-between p-3 rounded">
+                                    <span class="font-medium text-gray-600">4th Prize:</span>
+                                    <span class="font-bold text-green-600">₹3,750</span>
+                                </div>
+                                <div class="prize-row flex justify-between p-3 rounded">
+                                    <span class="font-medium text-gray-600">5th Prize:</span>
+                                    <span class="font-bold text-green-600">₹750</span>
                                 </div>
                             </div>
                         </div>
