new update in home page

--- a/index1.html
+++ b/index1.html
@@ -318,9 +318,9 @@
         .result-card-header {
             background: linear-gradient(135deg, #3B82F6 0%, #1D4ED8 100%);
             color: white;
-            padding: 12px 20px;
+            padding: 8px 20px;
             font-weight: 700;
-            font-size: 1.1rem;
+            font-size: .96rem;
             text-align: center;
         }
 
