new update in home page

--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
         }
 
         .result-container {
-            background: rgba(255, 255, 255, 0.95);
+            /* background: rgba(255, 255, 255, 0.95); */
             backdrop-filter: blur(10px);
             border-radius: 16px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            /* border: 1px solid rgba(255, 255, 255, 0.2); */
             padding: 24px !important;
         }
 
@@ -384,7 +384,7 @@
 
         .result-winning-number {
             font-size: 1.5rem;
-            font-weight: 700;
+            font-weight: 900;
             color: #374151;
             font-family: 'Courier New', monospace;
             letter-spacing: 2px;
@@ -434,7 +434,7 @@
             }
 
             .result-winning-number {
-                font-size: 1.3rem;
+                font-size: 1.4rem;
             }
         }
 
