--- a/index.html
+++ b/index.html
@@ -384,9 +384,10 @@
 
         .result-winning-number {
             font-size: 1.5rem;
-            font-weight: 900;
+            font-weight: 700;
             color: #374151;
-            font-family: 'Courier New', monospace;
+            font-family: poppins;
+            /* font-family: 'Courier New', monospace; */
             letter-spacing: 2px;
             /* margin-bottom: 12px; */
         }
