--- a/index.html
+++ b/index.html
@@ -786,9 +786,9 @@
                     <i class="fas fa-clock text-orange-500 mr-2 text-xl"></i>
                     Upcoming Lotteries
                 </h2>
-                <span
+                <!-- <span
                     class="bg-gradient-to-r from-orange-500 to-red-500 text-white text-sm px-3 py-1 rounded-full font-semibold">3
-                    Upcoming</span>
+                    Upcoming</span> -->
             </div>
 
             <div class="space-y-6">
