new update in home page

--- a/index.html
+++ b/index.html
@@ -386,8 +386,9 @@
             font-size: 1.5rem;
             font-weight: 700;
             color: #374151;
-            font-family: poppins;
+            /* font-family: poppins; */
             /* font-family: 'Courier New', monospace; */
+            font-family: ui-monospace ;
             letter-spacing: 2px;
             /* margin-bottom: 12px; */
         }
@@ -896,7 +897,7 @@
                             </div>
 
                             <!-- Countdown Timer -->
-                            <div class="countdown-container">
+                            <!-- <div class="countdown-container">
                                 <div class="flex items-center justify-between">
                                     <span class="countdown-label">Draws in:</span>
                                     <div class="flex space-x-2 items-center">
@@ -908,7 +909,7 @@
                                         <span class="card-text font-bold">m</span>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="text-right ml-4">
                             <i id="arrow-upcoming2"
@@ -986,7 +987,7 @@
                             </div>
 
                             <!-- Countdown Timer -->
-                            <div class="countdown-container">
+                            <!-- <div class="countdown-container">
                                 <div class="flex items-center justify-between">
                                     <span class="countdown-label">Draws in:</span>
                                     <div class="flex space-x-2 items-center">
@@ -998,7 +999,7 @@
                                         <span class="card-text font-bold">m</span>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="text-right ml-4">
                             <i id="arrow-upcoming3"
@@ -1076,7 +1077,7 @@
                             </div>
 
                             <!-- Countdown Timer -->
-                            <div class="countdown-container">
+                            <!-- <div class="countdown-container">
                                 <div class="flex items-center justify-between">
                                     <span class="countdown-label">Draws in:</span>
                                     <div class="flex space-x-2 items-center">
@@ -1088,7 +1089,7 @@
                                         <span class="card-text font-bold">m</span>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="text-right ml-4">
                             <i id="arrow-upcoming3"
