new update in home page

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         }
 
         .result-prize-amount {
-            font-size: 2rem;
+            font-size: 1.6rem;
             font-weight: 800;
             color: #059669;
             margin-bottom: 8px;
@@ -388,7 +388,7 @@
             color: #374151;
             /* font-family: poppins; */
             /* font-family: 'Courier New', monospace; */
-            font-family: ui-monospace ;
+            font-family: "ui-monospace","SFMono-Regular","Menlo","Monaco","Consolas","Liberation Mono","Courier New","monospace" ;
             letter-spacing: 2px;
             /* margin-bottom: 12px; */
         }
