new update in home page

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                                 <span class="result-badge rounded-full">RESULT</span>
                                 <span class="card-text-secondary card-date">28 June 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Wednesday Choice Weekly Lottery<br>(CL 18th Draw)
+                            <h3 class="card-text card-lottery-name">Wednesday Choice Weekly Lottery<br>(WEC 18th Draw)
                             </h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
@@ -659,7 +659,7 @@
                                 <span class="result-badge rounded-full">RESULT</span>
                                 <span class="card-text-secondary card-date">28 June 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Choice Weekly Lottery<br>(CL 18th Draw)</h3>
+                            <h3 class="card-text card-lottery-name">Wednesday Choice Weekly Lottery<br>(WEC 18th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
                                 <span class="card-prize">1st Prize: ₹25 Lakh</span>
@@ -763,7 +763,7 @@
                                 <span class="upcoming-badge rounded-full">NEXT</span>
                                 <span class="card-text-secondary card-date">29 June 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Wednesday Choice Weekly Lottery (CL 19th Draw)</h3>
+                            <h3 class="card-text card-lottery-name">Wednesday Choice Weekly Lottery (WEC 19th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
                                 <span class="card-prize">1st Prize: ₹75 Lakh</span>
@@ -852,7 +852,7 @@
                                 <span class="upcoming-badge rounded-full">UPCOMING</span>
                                 <span class="card-text-secondary card-date">30 June 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Thursday Choice Weekly Lottery (CL 19th Draw)</h3>
+                            <h3 class="card-text card-lottery-name">Thursday Choice Weekly Lottery (THC 19th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
                                 <span class="card-prize">1st Prize: ₹2 Crore</span>
@@ -942,7 +942,7 @@
                                 <span class="upcoming-badge rounded-full">UPCOMING</span>
                                 <span class="card-text-secondary card-date">01 July 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Friday Choice Weekly Lottery (CL 19th Draw)</h3>
+                            <h3 class="card-text card-lottery-name">Friday Choice Weekly Lottery (FRC 19th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
                                 <span class="card-prize">1st Prize: ₹60 Lakh</span>
@@ -1032,7 +1032,187 @@
                                 <span class="upcoming-badge rounded-full">UPCOMING</span>
                                 <span class="card-text-secondary card-date">01 July 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Saturday Choice Weekly Lottery (CL 19th Draw)</h3>
+                            <h3 class="card-text card-lottery-name">Saturday Choice Weekly Lottery (SAC 19th Draw)</h3>
+                            <div class="flex items-center card-text-secondary">
+                                <i class="fas fa-trophy text-yellow-300 mr-2"></i>
+                                <span class="card-prize">1st Prize: ₹60 Lakh</span>
+                            </div>
+
+                            <!-- Countdown Timer -->
+                            <!-- <div class="countdown-container">
+                                <div class="flex items-center justify-between">
+                                    <span class="countdown-label">Draws in:</span>
+                                    <div class="flex space-x-2 items-center">
+                                        <div class="countdown-badge" id="countdown3-days">2</div>
+                                        <span class="card-text font-bold">d</span>
+                                        <div class="countdown-badge" id="countdown3-hours">23</div>
+                                        <span class="card-text font-bold">h</span>
+                                        <div class="countdown-badge" id="countdown3-minutes">45</div>
+                                        <span class="card-text font-bold">m</span>
+                                    </div>
+                                </div>
+                            </div> -->
+                        </div>
+                        <div class="text-right ml-4">
+                            <i id="arrow-upcoming3"
+                                class="fas fa-chevron-down card-text text-xl transition-transform duration-300"></i>
+                        </div>
+                    </div>
+
+                    <div id="upcoming3" class="card-expand collapsed mt-6">
+                        <div class="result-container space-y-4">
+                            <!-- 1st Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">1st Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹60,00,000/-</div>
+                                    <div class="result-winning-number">_ _ _ _ _ _</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 2nd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">2nd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹6,00,000/-</div>
+                                    <div class="result-winning-number">_ _ _ _ _ _</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 3rd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">3rd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹60,000/-</div>
+                                    <div class="result-winning-number">_ _ _ _ _ _</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 4th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">4th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹3,000/-</div>
+                                    <div class="result-winning-number">_ _ _ _ _ _</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 5th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">5th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹600/-</div>
+                                    <div class="result-winning-number">_ _ _ _ _ _</div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Upcoming Lottery 3 -->
+                <div class="lottery-card upcoming-card-3 cursor-pointer" onclick="toggleResult('upcoming3')">
+                    <div class="flex items-center justify-between">
+                        <div class="flex-1 card-element-spacing">
+                            <div class="flex items-center space-x-3">
+                                <span class="upcoming-badge rounded-full">UPCOMING</span>
+                                <span class="card-text-secondary card-date">01 July 2025</span>
+                            </div>
+                            <h3 class="card-text card-lottery-name">Sunday Choice Weekly Lottery (SUC 19th Draw)</h3>
+                            <div class="flex items-center card-text-secondary">
+                                <i class="fas fa-trophy text-yellow-300 mr-2"></i>
+                                <span class="card-prize">1st Prize: ₹60 Lakh</span>
+                            </div>
+
+                            <!-- Countdown Timer -->
+                            <!-- <div class="countdown-container">
+                                <div class="flex items-center justify-between">
+                                    <span class="countdown-label">Draws in:</span>
+                                    <div class="flex space-x-2 items-center">
+                                        <div class="countdown-badge" id="countdown3-days">2</div>
+                                        <span class="card-text font-bold">d</span>
+                                        <div class="countdown-badge" id="countdown3-hours">23</div>
+                                        <span class="card-text font-bold">h</span>
+                                        <div class="countdown-badge" id="countdown3-minutes">45</div>
+                                        <span class="card-text font-bold">m</span>
+                                    </div>
+                                </div>
+                            </div> -->
+                        </div>
+                        <div class="text-right ml-4">
+                            <i id="arrow-upcoming3"
+                                class="fas fa-chevron-down card-text text-xl transition-transform duration-300"></i>
+                        </div>
+                    </div>
+
+                    <div id="upcoming3" class="card-expand collapsed mt-6">
+                        <div class="result-container space-y-4">
+                            <!-- 1st Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">1st Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹60,00,000/-</div>
+                                    <div class="result-winning-number">_ _ _ _ _ _</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 2nd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">2nd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹6,00,000/-</div>
+                                    <div class="result-winning-number">_ _ _ _ _ _</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 3rd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">3rd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹60,000/-</div>
+                                    <div class="result-winning-number">_ _ _ _ _ _</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 4th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">4th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹3,000/-</div>
+                                    <div class="result-winning-number">_ _ _ _ _ _</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 5th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">5th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹600/-</div>
+                                    <div class="result-winning-number">_ _ _ _ _ _</div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Upcoming Lottery 3 -->
+                <div class="lottery-card upcoming-card-3 cursor-pointer" onclick="toggleResult('upcoming3')">
+                    <div class="flex items-center justify-between">
+                        <div class="flex-1 card-element-spacing">
+                            <div class="flex items-center space-x-3">
+                                <span class="upcoming-badge rounded-full">UPCOMING</span>
+                                <span class="card-text-secondary card-date">01 July 2025</span>
+                            </div>
+                            <h3 class="card-text card-lottery-name">Monday Choice Weekly Lottery (MOC 19th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
                                 <span class="card-prize">1st Prize: ₹60 Lakh</span>
